2000-06-17  Chris Toshok  <toshok@helixcode.com>

	* e-tree-model.c (e_tree_model_node_insert): call
	e_table_model_row_inserted instead of e_table_model_changed.

2000-06-17  Christopher James Lahey  <clahey@helixcode.com>

	* e-cell-text.c: Made cells with strikeout on have a line from the
	left margin to the right margin, instead of just over the text.

2000-06-16  Christopher James Lahey  <clahey@helixcode.com>

	* e-table.c, e-table.h: Moved the reflow signal handling into an
	idle handler to fix a bug when resizing twice in succession.

2000-06-15  Chris Toshok  <toshok@helixcode.com>

	* e-cell-tree.c (ect_print): print the icon for the tree control.

2000-06-14  Chris Toshok  <toshok@helixcode.com>

	* e-tree-example-1.c (print_tree): new function, to generate
	postscript so i can test tree printing.
	(create_tree): add print button.

	* e-cell-tree.c (ect_print_height): implement function (in a
	broken way for the time being, heh).
	(ect_print): implement function to draw tree controls and offset
	the subcell's printing.  icons aren't printed yet, just lines.
	(ect_draw): remove old unnecessary comments.  only draw the
	horizontal line in specific instances (well, add a test so a lone
	root node doesn't get the horizontal line.)
	(e_cell_tree_class_init): add print/print_height methods.

2000-06-14  Christopher James Lahey  <clahey@helixcode.com>

	* e-cell-text.c: Request the value of e_table_is_cell_editable of
	the model_col instead of the view_col.

	* e-table-item.h: Slight style fixup.

2000-06-13  Christopher James Lahey  <clahey@helixcode.com>

	* e-cell-text.c: Clip the contained text.

	* e-table-group-container.c: Did a first pass at grouped
	printing.  This works, but there's no fancy boxes or headers
	around the groups.

	* e-table-item.c: Added will_fit function and added quantize
	function to _height.

2000-06-12  Federico Mena Quintero  <federico@helixcode.com>

	* e-table-model.[ch]: Removed the freeze/thaw stuff for the model.