@@ -1,3 +1,8 @@
+2000-06-20  Christopher James Lahey  <clahey@helixcode.com>
+
+	* e-table-item.c, e-table-item.h: Started adapting ETableItem to
+	use the canvas selection/cursor system.
+
 2000-06-17  Chris Toshok  <toshok@helixcode.com>
 
 	* e-tree-model.c (e_tree_model_node_insert): call
